<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YH智电宝</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescription"></string>
    <string name="hint_when_loading">请稍候&#8230;</string>
    <!-- modify if new version -->
    <string name="default_version_name">1.0.0</string>
    <!-- back button -->
    <string name="txt_back_btn">返&#160;&#160;&#160;回</string>
    <string name="txt_exit_btn">退&#160;&#160;&#160;出</string>
    <!-- exit dialog -->
    <string name="hint_title">提&#160;&#160;&#160;示</string>
    <string name="exit_dialog_message">退出&#160;YH智电宝&#160;应用吗？</string>
    <string name="confirm">确&#160;&#160;&#160;定</string>
    <string name="cancel">取&#160;&#160;&#160;消</string>
    <string name="info_dialog_title">通&#160;&#160;&#160;知</string>
    <!-- activity title -->
    <string name="activity_title_inquiry">电费查询</string>
    <string name="activity_title_recharge">快捷充值</string>
    <string name="activity_title_bind">帐户管理</string>
    <string name="activity_title_record">充值记录</string>
    <string name="activity_title_setting">设&#160;&#160;&#160;置</string>
    <string name="activity_title_feedback">反&#160;&#160;&#160;馈</string>
    <string name="activity_title_about">关&#160;&#160;&#160;于</string>
    <string name="activity_title_notice">《使用注意事项》</string>
    <string name="activity_title_school_chosen">选择学校</string>
    <string name="activity_title_building_chosen">选择公寓</string>
    <string name="activity_title_information">通知信息</string>
    <!-- same strings in inquiry, recharge, bind ,record activities -->
    <string name="btn_inquiry_txt">查&#160;&#160;&#160;&#160;&#160;&#160;询</string>
    <!-- inquiry activity -->
    <string name="hint_choose_school">学校</string>
    <string name="hint_choose_apart">公寓</string>
    <string name="hint_input_room">请输入房间号</string>
    <string name="hint_choose_price">充值金额</string>
    <string name="hint_choose_school_first">请先选择学校</string>
    <string name="txt_notice">《使用注意事项》</string>
    <string name="txt_recharge">充&#160;&#160;&#160;值</string>
    <!-- recharge activity -->
    <string name="txt_inquiry">查&#160;&#160;&#160;询</string>
    <string name="choose_price">请选择充值金额</string>
    <string name="unit_price_hint">电费单价：</string>
    <string name="unit_of_elec_price">元/度</string>
    <string name="default_price_hint">--.--</string>
    <string name="txt_agree">已阅读</string>
    <string name="btn_recharge_txt">充&#160;&#160;&#160;&#160;&#160;&#160;值</string>
    <string name="remote_call_failed">请求远程服务失败！</string>
    <!-- bind activity -->
    <string name="btn_bind_txt">绑&#160;&#160;&#160;&#160;&#160;&#160;定</string>
    <string name="btn_unbind_txt">解&#160;&#160;&#160;&#160;&#160;&#160;绑</string>
    <string name="bind_info_ok">绑定成功</string>
    <string name="hint_unbind_message">解绑该帐户？</string>
    <string name="not_bind">--未绑定--</string>
    <string name="already_bind">--已绑定--</string>
    <string name="room_not_exist">房间不存在，请核实后重试！</string>
    <!-- setting activity -->
    <string name="current_version">当前版本&#160;&#160;V</string>
    <string name="update_dialog_title">版&#160;本&#160;更&#160;新</string>
    <string name="already_newest_message">当前已是最新版本，无需更新！</string>
    <string name="find_new_version_message">发现新版本，是否更新？</string>
    <string name="update_now">更&#160;&#160;&#160;新</string>
    <string name="update_not_now">暂时不</string>
    <!-- download -->
    <string name="downloading">下载中:</string>
    <string name="download_finish">下载完毕</string>
    <string name="download_failed">下载失败</string>
    <!-- data load and net -->
    <string name="network_ungelivable">网络不给力，请稍后重试！</string>
    <string name="network_connect">网络已连接</string>
    <string name="network_interupt">网络已断开</string>
    <string name="request_failed">获取信息失败，请重试！</string>
    <string name="error_data">数据格式错误！</string>
    <!-- feedback activity -->
    <string name="hint_input_advice">请填写您的意见或建议：</string>
    <string name="hint_input_here">输入意见或建议&#8230;</string>
    <string name="submit_advice">提交反馈</string>
    <string name="hint_feedback_succeed">反馈成功</string>
    <string name="hint_feedback_failed">反馈失败，请重试！</string>
    <string name="hint_input_invalid">请输入有效意见或建议！</string>
    <!-- about activity -->
    <string name="about_version">YH&#160;智电宝\nAndroid版&#160;&#160;V</string>
    <string name="about_introduction">&#160;&#160;&#160;&#160;&#160;&#160;YH智电宝，是新一代掌上查询校园用电和便捷充值的智能平台移动客户端，通过支付宝便捷支付平台支付，支付成功后便可对指定的宿舍进行电费充值，方便学生日常用电查询和充值。</string>
    <!-- notice activity -->
    <string name="notice_title">YH智电宝使用注意事项</string>
    <string name="notice_content">1.YH智电宝使用支付宝平台进行支付，支付过程中，请遵循支付宝相应的法律法规和使用协议。
        \n\n2.支付成功后，进行电控端的充值操作，可能会存在一定的充值的延时性，请耐心等待后进行查询。
        \n\n3.充值成功后，若经多次查询，电费迟迟未到帐，请联系学校管理员进行处理。
        \n\n4.请严格按照应用指示进行操作，减少误操作，确保支付和充值的准确性。
        \n\n5.支付过程中，请确保网络良好并且安全，减少因此造成的不必要的损失。
        \n\n6.使用本应用时，需遵守学校相应的规定或其他的相应事项。
        \n\n7.本应用中提供的充值记录仅对相应的宿舍进行查询，个人充值记录可查询个人的支付宝账户。
        \n\n8.如有其他未尽事宜，请咨询学校管理员。</string>
    <!-- record activity -->
    <string name="no_record">尚无充值记录</string>
    <string name="recharge_time">充值时间:</string>
    <string name="recharge_trade_no">交易号:</string>
    <string name="recharge_money">充值金额:</string>
    <!-- information activity -->
    <string name="no_information">尚无通知信息</string>
    <!-- result activity -->
    <string name="result_bind">绑定成功</string>
    <string name="txt_bind_success">您已绑定成功！</string>
    <string name="txt_bind_info">绑定信息如下：</string>
    <string name="txt_school">学校：</string>
    <string name="txt_apart">公寓：</string>
    <string name="txt_room">房间：</string>
    <string name="confirm_exit">确定并返回</string>
    <string name="result_inquiry">电费信息</string>
    <string name="txt_elec_detail">--电量查询结果--</string>
    <string name="txt_used">当前使用电量：</string>
    <string name="txt_remain">当前剩余电量：</string>
    <string name="unit_of_elec">&#160;&#160;度</string>
    <string name="txt_last_read_time">数据更新时间：</string>
    <string name="result_recharge">支付成功</string>
    <string name="txt_pay_success">您已成功支付：</string>
    <string name="rmb">&#160;元</string>
    <string name="txt_pay_hint">（注：支付成功后，由于操作延时充值金额不能立即到账，建议1&#8211;2分钟后查询。\n若多次查询后仍未到帐的，请及时询问学校宿舍管理员！）</string>

</resources>