<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- basic info layout -->

            <include
                android:id="@+id/recharge_basic_info"
                layout="@layout/basic_info" />

            <!-- 学校电费单价 -->

            <LinearLayout
                android:id="@+id/room_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/container_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/unit_price_hint"
                    android:textSize="@dimen/basic_info_txt" />

                <TextView
                    android:id="@+id/unit_price"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:textSize="@dimen/basic_info_txt" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/unit_of_elec_price"
                    android:textSize="@dimen/basic_info_txt" />
            </LinearLayout>

            <!-- 充值金额 -->

            <RelativeLayout
                android:id="@+id/price_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/container_height"
                android:layout_margin="@dimen/container_margin"
                android:background="@drawable/single_bg"
                android:clickable="true"
                android:paddingLeft="15dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dip"
                    android:contentDescription="@string/contentDescription"
                    android:duplicateParentState="true"
                    android:src="@drawable/chevron" />

                <TextView
                    android:id="@+id/price_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:duplicateParentState="true"
                    android:hint="@string/hint_choose_price"
                    android:textColor="@color/text_color_selector"
                    android:textSize="@dimen/basic_info_txt" />
            </RelativeLayout>

            <!-- 注意事项 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/notice_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/txt_agree"
                    android:textSize="@dimen/notice_txt" />

                <TextView
                    android:id="@+id/notice_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_notice"
                    android:textColor="@drawable/notice_text_color"
                    android:textSize="@dimen/notice_txt" />
            </LinearLayout>

            <!-- recharge button -->

            <Button
                android:id="@+id/btn_recharge"
                style="@style/btnStylesorbus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:enabled="false"
                android:text="@string/txt_recharge" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>