<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 选择学校 -->

            <RelativeLayout
                android:id="@+id/r_choose_school"
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:layout_margin="8dip"
                android:background="@drawable/info_bg"
                android:clickable="true"
                android:paddingLeft="15dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/contentDescription"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_right_arrow" />

                <TextView
                    android:id="@+id/txt_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:duplicateParentState="true"
                    android:hint="@string/hint_choose_school"
                    android:textSize="16sp" />
            </RelativeLayout>

            <!-- 选择楼号 -->

            <RelativeLayout
                android:id="@+id/r_choose_building"
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:layout_margin="8dip"
                android:background="@drawable/info_bg"
                android:clickable="true"
                android:paddingLeft="15dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/contentDescription"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_right_arrow" />

                <TextView
                    android:id="@+id/txt_building"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:duplicateParentState="true"
                    android:hint="@string/hint_choose_building"
                    android:textSize="16sp" />
            </RelativeLayout>

            <!-- 输入房间号 -->

            <RelativeLayout
                android:id="@+id/r_choose_room"
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:layout_margin="8dip"
                android:background="@drawable/info_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="15dip" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/hint_input_room"
                    android:inputType="number"
                    android:textSize="16sp" />
            </RelativeLayout>

            <!-- 查询按钮 -->

            <Button
                style="@style/btnStyleAcapulco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:text="@string/btn_bind_txt" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>