<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_info_bg"
        android:minHeight="@dimen/info_min_height"
        android:orientation="horizontal"
        android:padding="@dimen/info_container_padding" >

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/ic_empty"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/txt_padding_left" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_txt_margin"
                    android:text="@string/recharge_time"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/TextColorGray"
                    android:textSize="@dimen/date_txt" />

                <TextView
                    android:id="@+id/trade_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_txt_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/TextColorGray"
                    android:textSize="@dimen/date_txt" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="@dimen/info_txt_margin"
                android:layout_marginRight="@dimen/info_txt_margin"
                android:background="#B6B6B6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_txt_margin"
                    android:text="@string/recharge_trade_no"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#333333"
                    android:textSize="@dimen/message_txt" />

                <TextView
                    android:id="@+id/trade_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_txt_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#333333"
                    android:textSize="@dimen/message_txt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_txt_margin"
                    android:text="@string/recharge_money"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#333333"
                    android:textSize="@dimen/message_txt" />

                <TextView
                    android:id="@+id/trade_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_txt_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#333333"
                    android:textSize="@dimen/message_txt" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>